Remove ViewHostMsg_DidFirstPaintAfterLoad

ViewHostMsg_DidFirstPaintAfterLoad is currently stored inside
ViewHostMsg_SwapCompositorFrame, but once ViewHostMsg_SwapCompositorFrame
is mojoified, we don't want to have IPC messages sent using mojo calls.
Fortunately ViewHostMsg_DidFirstPaintAfterLoad can go away after the
introduction of content_source_id in CompositorFrameMetadata a few
weeks ago.

BUG=704972

Review-Url: https://codereview.chromium.org/2770873002
Cr-Commit-Position: refs/heads/master@{#459514}

Former-commit-id: 087035f0efd4da20592c02b64fddaa7bfee761c6